<resources>
    <string name="app_name">DynaBlaster</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_options">Options</string>
    <string name="menu_back">Back</string>
    <string name="menu_back_full">Back to Menu</string>
    <string name="menu_resetGame">Reset game progress</string>

    <string name="prefs_name">com.kopecrad.dynablaster.gameprefs</string>
    <string name="menu_sound">Enable sound</string>
    <string name="menu_scoreboard">Scoreboard</string>
    <string name="menu_gameNew">Start new game</string>
    <string name="menu_gameContinue">Continue</string>

    <string name="menu_endText_won">You won!</string>
    <string name="menu_endText_lostHealth">You died!</string>
    <string name="menu_endText_lostTime">Time\'s up!</string>

    <string name="panel_score">Player\'s score</string>
    <string name="panel_clock">Time left</string>
    <string name="panel_lives">Lives left</string>
    <string name="btn_movementCtrls">Movement controls</string>
    <string name="score_switchMode_off">Show offline leaderboards</string>
    <string name="score_head_player">Player</string>
    <string name="score_head_score">Score</string>
    <string name="score_head_date">Date</string>
    <string name="score_switchMode_on">Show online scoreboards</string>
    <string name="score_head_levels">Levels cleared</string>
    <string name="menu_endText_saveScore">Save your score</string>
    <string name="menu_endText_nickname">Enter your nickname</string>
    <string name="save">Save</string>
    <string name="menu_resetScores">Remove local scoreboards</string>
</resources>
